@@ -3,168 +3,180 @@
 <th>#</th><th>File</th><th>Line</th><th>Problem</th></tr>
 <tr bgcolor="lightgrey"> 
 <td align="center">1</td>
+<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/FidoFrame.java</td>
+<td align="center" width="5%">1</td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=54, ATFD=166, TCC=0.11067193675889328)</a></td>
+</tr>
+<tr> 
+<td align="center">2</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/FidoMain.java</td>
 <td align="center" width="5%">48</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#UseUtilityClass">All methods are static.  Consider using a utility class instead. Alternatively, you could add a private constructor or make the class abstract to silence this warning.</a></td>
 </tr>
-<tr> 
-<td align="center">2</td>
+<tr bgcolor="lightgrey"> 
+<td align="center">3</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/CircuitPanel.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=74, ATFD=118, TCC=0.04358974358974359)</a></td>
 </tr>
-<tr bgcolor="lightgrey"> 
-<td align="center">3</td>
+<tr> 
+<td align="center">4</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/MouseMoveClickHandler.java</td>
 <td align="center" width="5%">212</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
 </tr>
-<tr> 
-<td align="center">4</td>
+<tr bgcolor="lightgrey"> 
+<td align="center">5</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/controllers/HandleActions.java</td>
 <td align="center" width="5%">325</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
 </tr>
-<tr bgcolor="lightgrey"> 
-<td align="center">5</td>
-<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/controllers/ParserActions.java</td>
-<td align="center" width="5%">1</td>
-<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=172, ATFD=72, TCC=0.0)</a></td>
-</tr>
 <tr> 
 <td align="center">6</td>
+<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/circuit/controllers/ParserActions.java</td>
+<td align="center" width="5%">1</td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=174, ATFD=72, TCC=0.0)</a></td>
+</tr>
+<tr bgcolor="lightgrey"> 
+<td align="center">7</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/DialogExport.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=57, ATFD=88, TCC=0.007352941176470588)</a></td>
 </tr>
-<tr bgcolor="lightgrey"> 
-<td align="center">7</td>
+<tr> 
+<td align="center">8</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/DialogParameters.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=47, ATFD=212, TCC=0.0)</a></td>
 </tr>
+<tr bgcolor="lightgrey"> 
+<td align="center">9</td>
+<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/DialogSymbolize.java</td>
+<td align="center" width="5%">1</td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=53, ATFD=122, TCC=0.0)</a></td>
+</tr>
 <tr> 
-<td align="center">8</td>
+<td align="center">10</td>
+<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/DialogSymbolize.java</td>
+<td align="center" width="5%">370</td>
+<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
+</tr>
+<tr bgcolor="lightgrey"> 
+<td align="center">11</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/print/DialogPrint.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=49, ATFD=242, TCC=0.011857707509881422)</a></td>
 </tr>
-<tr bgcolor="lightgrey"> 
-<td align="center">9</td>
+<tr> 
+<td align="center">12</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/dialogs/print/DialogPrint.java</td>
 <td align="center" width="5%">240</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/empty.html#EmptyCatchBlock">Avoid empty catch blocks</a></td>
 </tr>
-<tr> 
-<td align="center">10</td>
+<tr bgcolor="lightgrey"> 
+<td align="center">13</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/export/ExportEPS.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=47, ATFD=35, TCC=0.0)</a></td>
 </tr>
-<tr bgcolor="lightgrey"> 
-<td align="center">11</td>
+<tr> 
+<td align="center">14</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/export/ExportPDF.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=81, ATFD=50, TCC=0.05533596837944664)</a></td>
 </tr>
-<tr> 
-<td align="center">12</td>
-<td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/geom/GeometricDistances.java</td>
-<td align="center" width="5%">356</td>
-<td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#UnnecessaryLocalBeforeReturn">Consider simply returning the value vs storing it in local variable 'dl'</a></td>
-</tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">13</td>
+<td align="center">15</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/geom/MapCoordinates.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=79, ATFD=30, TCC=0.22692307692307692)</a></td>
 </tr>
 <tr> 
-<td align="center">14</td>
+<td align="center">16</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/globals/Globals.java</td>
 <td align="center" width="5%">37</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#UseUtilityClass">All methods are static.  Consider using a utility class instead. Alternatively, you could add a private constructor or make the class abstract to silence this warning.</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">15</td>
+<td align="center">17</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/globals/LibUtils.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=66, ATFD=25, TCC=0.0)</a></td>
 </tr>
 <tr> 
-<td align="center">16</td>
+<td align="center">18</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/graphic/swing/Graphics2DSwing.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=76, ATFD=72, TCC=0.04946236559139785)</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">17</td>
+<td align="center">19</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/librarymodel/LibraryModel.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=99, ATFD=67, TCC=0.04187192118226601)</a></td>
 </tr>
 <tr> 
-<td align="center">18</td>
+<td align="center">20</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/librarymodel/LibraryModel.java</td>
 <td align="center" width="5%">599</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/empty.html#EmptyCatchBlock">Avoid empty catch blocks</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">19</td>
+<td align="center">21</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/macropicker/MacroTree.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=102, ATFD=100, TCC=0.02702702702702703)</a></td>
 </tr>
 <tr> 
-<td align="center">20</td>
+<td align="center">22</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/macropicker/model/MacroTreeModel.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=102, ATFD=45, TCC=0.03753753753753754)</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">21</td>
+<td align="center">23</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/GraphicPrimitive.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=148, ATFD=72, TCC=0.20259019426456984)</a></td>
 </tr>
 <tr> 
-<td align="center">22</td>
+<td align="center">24</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/GraphicPrimitive.java</td>
 <td align="center" width="5%">624</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#EmptyMethodInAbstractClassShouldBeAbstract">An empty method in an abstract class should be abstract instead</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">23</td>
+<td align="center">25</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/GraphicPrimitive.java</td>
 <td align="center" width="5%">988</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#EmptyMethodInAbstractClassShouldBeAbstract">An empty method in an abstract class should be abstract instead</a></td>
 </tr>
 <tr> 
-<td align="center">24</td>
+<td align="center">26</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/PrimitiveBezier.java</td>
 <td align="center" width="5%">270</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">25</td>
+<td align="center">27</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/PrimitiveBezier.java</td>
 <td align="center" width="5%">275</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
 </tr>
 <tr> 
-<td align="center">26</td>
+<td align="center">28</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/PrimitiveMacro.java</td>
 <td align="center" width="5%">1</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#GodClass">Possible God class (WMC=61, ATFD=52, TCC=0.15608465608465608)</a></td>
 </tr>
 <tr bgcolor="lightgrey"> 
-<td align="center">27</td>
+<td align="center">29</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/primitives/PrimitiveOval.java</td>
 <td align="center" width="5%">159</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/design.html#ConfusingTernary">Avoid if (x != y) ..; else ..;</a></td>
 </tr>
 <tr> 
-<td align="center">28</td>
+<td align="center">30</td>
 <td width="*%">/Users/davidebucci/Desktop/Perso/FidoCadJ/src/net/sourceforge/fidocadj/toolbars/ToolbarZoom.java</td>
 <td align="center" width="5%">233</td>
 <td width="*"><a href="https://pmd.github.io/pmd-5.3.3/pmd-java/rules/java/empty.html#EmptyCatchBlock">Avoid empty catch blocks</a></td>
